style.css
*{
    cursor: none;
    margin: 0;
}
p{
    font-size: 12px;
    font-weight: 400;
    line-height: 2;
    color: rgba(0, 0, 0, 0.7);
    font-family: "Quicksand", Arial, sans-serif;
}
.background{
    position: fixed;
    height: 100vh;
    width: 100vw;
    background-image: url('./bg.jpg');
    background-size: 100% 100%;
}
.popup{
    width: 80%;
    max-width: 300px;
    border-radius: 30px;
    position: fixed;
    top: 50px;
    right: 10px;
    z-index: 22;
    background: rgba(0, 0, 0, 0.7);
    padding: 10px;
    text-align: center;
    opacity: 0;
    transform: translateX(350px);
    transition: 0.7s ease-in-out;
    transition-property: opacity, transform;
}
.close-popup{
    width: 15px;
    height: 15px;
    padding: 5px;
    background: red;
    border-radius: 50%;
    position: absolute;
    top: -8px;
    right: -5px;
}
.popup h1{
    color: #729fe2;
}
.popup p{
    color: #f9bf3f;
}
/*.balloons{
    position: fixed;
    z-index: 22;
    height: 200px;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
}
.balloons svg{
    animation: windMotion 3.5s infinite alternate;
    transform-origin: bottom;
}
@keyframes windMotion{
    from{
        transform: rotateZ(-10deg);
    }
    to{
        transform: rotateZ(10deg);
    }
}*/
.centered{
    text-align: center;
}
.larger{
    font-size: 18px !important;
    font-weight: 600;
}
.underline{
    text-decoration: underline;
}
.mouse-block{
    height: 20px;
    width: 20px;
    visibility: hidden;
    opacity: 0;
    width: 20px;
    border: 2px solid #a53838;
    box-shadow: 0 0 20px #a53838;
    border-radius: 50%;
    position: absolute;
    z-index: 111111;
    pointer-events: none;
    transition: 0.3s ease-in-out;
    backdrop-filter: grayscale();
    transition-property: box-shadow, transform, border, visiblity, opacity,background;
    animation: mouse-pulse 0.5s infinite alternate;
}
.mouse-block::after{
    content:"";
    width: 20px;
    height: 20px;
    border: 8px solid rgb(192, 148, 148);
    border-radius: 50%;
    position: absolute;
    top:-8px;
    left:-8px;
    opacity: 0.4;
    animation: mouse-pulse-after 0.5s infinite alternate;
}
@keyframes mouse-pulse-after{
    from{
        transform: scale(1);
    }
    to{
        transform: scale(0.4);
    }
}
@keyframes mouse-pulse{
    from{
        transform: scale(1);
    }
    to{
        transform: scale(0.7);
    }
}
@keyframes mouse-click{
    0%{
        transform: scale(1);
    }
    50%{
        transform: scale(2);
    }
    100%{
        transform: scale(1);
        opacity: 0;
    }
}
.mouse-click{
    border: 2px solid #ec5453;
    box-shadow: 0 0 10px #ec5453;
    animation: mouse-click 0.7s forwards;
}
.icon::before{
    display: inline-block;
    font-style: normal;
    font-variant: normal;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    font-weight: 600;
    font-family: "Font Awesome 5 Free";
    font-size: xx-large;
    padding: px;
}
.web::before{
content: "\f0ac" ;
}
.clr-1{
    color:#ec5453 ;
}
.software::before{
content: "\f108";
}
.clr-2{
color:#f9bf3f ;
}
.idea::before{
content: "\f0eb";
}
.clr-3{
color: #a84cb8;
}
button{
    background: none;
    color: white;
    outline: none;
    border-color: #fff;
    box-shadow: 0 0 10px #fff;
    padding: 10px;
    margin: 20px 0 0 0;
}
button:hover{
    background: black;
    border-color: #2c98f0;
    box-shadow: 0 0 10px #2c98f0;
    padding-top: 11px;
}
a{
    text-decoration: none;
    color:#2c98f0;
    font-family: "Quicksand", Arial, sans-serif;
    font-size: 12px;
    font-weight: 500;
    text-transform: uppercase;
    letter-spacing: 1px;
}
h1,h2,h3,h4,h5,h6{
    font-weight: 700;
    line-height: 2;
    font-family: "Playfair Display", Georgia, serif;
    margin-bottom: 0px;
}
h1{
    font-size: 22px;
}
h2{
    font-size: 18px;
}
h3{
    font-size: 14px;
    color: rgba(255, 255, 255, 0.7);
}
::-webkit-scrollbar {
    width: 2px;
    height: 2px;
  }
  ::-webkit-scrollbar-corner{
      width: 2px;
  }
  ::-webkit-scrollbar-track {
    background: none;
    outline: none;
    border: none;
  }
  ::-webkit-scrollbar-thumb {
    background: red;
    border-radius: 10px;
    width: 2px;
  }
/*.loading{
    height: 100vh;
    width: 100%;
    background: #000;
    position: absolute;
}
.loading-wrap{
    display:flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    margin-top: 50px;
}
.loading h1{
    text-align: center;
    color: #f2f3f7;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    transition: all 1s;
    line-height: 5rem;
}
.loading img{
    align-items: center;
    visibility: hidden;
    opacity: 0;
}
.loading span{
    visibility: hidden;
    opacity: 0;
    font-size: 0.5rem;
}*/
.flex-container{
    display: flex;
    justify-content: center;
    align-items: center;
    /*display: none;*/
}
.side-nav{
    height:99.7vh;
    min-height: 611px;
    background: #f2f3f7;
    border: 1px solid transparent;
    position: fixed;
    width: 30%;
    max-width: 300px;
    top: 0px;
    left:-40%;
    display: flex;
    transition: .4s;
    transition-property: visibility, left;
    display: flex;
    visibility: hidden;
    justify-content: center;
}
.side-nav .body{
    display: flex;
    align-items: center;
    border: 1px solid transparent;
    height: 89vh;
    min-height: 500px;
    width: 90%;
    position: absolute;
    top: 10%;
    flex-direction: column;
}
.side-nav .body .footer{
    display: flex;
    justify-content: center;
    border: 1px solid transparent;
    height: 30px;
    width: 100%;
    position: absolute;
    bottom: 0;
}
@media only screen and (max-height: 575px) {
    .footer{
        visibility: hidden;
        }
  }
.social-btn{
    display: inline-block;
    letter-spacing: 20px;
    height: 50px;
    padding: 5px;
}
/* ... */

